<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/moviesFragment"
        android:icon="@drawable/ic_movie"
        app:showAsAction="always"
        android:orderInCategory="1"
        android:title="@string/movies"/>


    <item
        android:id="@+id/usersFragment"
        android:icon="@drawable/ic_people"
        app:showAsAction="always"
        android:orderInCategory="2"
        android:title="@string/users"/>

    <item
        android:id="@+id/mapFragment"
        android:icon="@drawable/ic_map"
        app:showAsAction="always"
        android:orderInCategory="2"
        android:title="@string/map"/>
</menu>